syntax = "proto2";

package syzoj.judge.legacy;

option go_package = "github.com/syzoj/syzoj-ng-go/model/judge/legacy";

message ProgressReportData {
	optional string task_id = 1;
	optional ProgressReportType type = 2;
	optional Result progress = 3;
}

// OverallResult | CompilationResult
message Result {
	optional TaskStatus status = 1;
	optional string message = 2;
	optional string system_message = 3;
	optional Result compile = 4;
	optional JudgeResult judge = 5;
}

message JudgeResult {
	repeated SubtaskResult subtasks = 1;
}

message SubtaskResult {
	optional double score = 1;
	repeated TestcaseResult cases = 2;
}

message TestcaseResult {
	optional TaskStatus status = 1;
	optional TestcaseDetails result = 2;
}

message TestcaseDetails {
	optional TestcaseResultType type = 1;
	optional double time = 2;
	optional double memory = 3;
	optional FileContent input = 4;
	optional FileContent output = 5;
	optional double scoring_rate = 6;
	optional string user_output = 7;
	optional string user_error = 8;
	optional string spj_message = 9;
	optional string system_message = 10;
}

message FileContent {
	optional string content = 1;
	optional string name = 2;
}

enum TaskStatus {
	Waiting = 0;
	Running = 1;
	Done = 2;
	Failed = 3;
	Skipped = 4;
}

// error from CompilationResult is ignored

enum ProgressReportType {
	Started = 1;
	Compiled = 2;
	Progress = 3;
	Finished = 4;
	Reported = 5;
}

enum TestcaseResultType {
	Accepted = 1;
	WrongAnswer = 2;
	PartiallyCorrect = 3;
	MemoryLimitExceeded = 4;
	TimeLimitExceeded = 5;
	OutputLimitExceeded = 6;
	FileError = 7;
	RuntimeError = 8;
	JudgementFailed = 9;
	InvalidInteraction = 10;
}
